# newsletter-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  database_diagram.md  openssl_rust.dockerfile  spec.yaml
.cargo/: .gitkeep
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: local.yaml  main.yaml  production.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
migrations/: 20220128124500_initialize_schema_and_tables.sql  20220128125000_create_subscription_table.sql  20220128_create_subscription_table.sql  20220305131000_postgresql_healthcheck_table.sql  20220509205500_alter_table_subscription.sql  20240731210100_enforce_subscriber_name_constraints.sql
scripts/: launch_postgres.bash
src/: censoredstring.rs  configuration.rs  lib.rs  main.rs  postgres.rs  readiness.rs  smtp_email_sender.rs  startup.rs  telemetry.rs
src/routes/: healthcheck.rs  healthcheck_structs.rs  mod.rs  subscription.rs
src/subscription/: mod.rs  subscription_filtered_email.rs  subscription_filtered_name.rs  subscription_form_data.rs
testdata/: k6_get_healthcheck.js  k6_post_subscription.js
tests/: healthcheck.rs
