[package]
name = "newsletter-rs"
version = "0.1.0"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/drconopoima/newsletter-rs.git"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="newsletter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="^4.0.0-rc.3" }
serde = {version = "^1", features=["derive"]}
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
config = { version="^0.12", default-features = false, features = ["yaml"] }
tokio-postgres = { version="^0.7", features=["with-uuid-0_8"] }
uuid = { version = "^0.8", features = ["v4"] }
regex = { version = "^1" }
deadpool-postgres = { version = "^0.10" }
md5 = { version = "^0.7" }
env_logger = { version = "^0.9" }

[dev-dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde_urlencoded = "^0.7"

