[package]
name = "newsletter-rs"
version = "0.1.0"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/drconopoima/newsletter-rs.git"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="newsletter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="^4" }
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
config = { version="^0.12", default-features = false, features = ["yaml"] }
futures = { version="^0.3" }
tokio-postgres = { version="^0.7", features=[ "with-uuid-0_8" , "with-time-0_3" ] }
uuid = { version = "^0.8", features = ["v4"] }
regex = { version = "^1" }
deadpool-postgres = { version = "^0.10" }
tracing = { version = "^0.1", features = [ "log" ] }
md5 = { version = "^0.7" }
time = { version = "^0.3", features=["formatting"] }
tracing-subscriber = { version = "^0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "^0.3"
tracing-log = "^0.1"
anyhow = "^1"
tracing-actix-web = { version = "^0.5" }
serde-aux = "^3"
postgres-native-tls = { "version" = "^0.5" }
native-tls = { "version" = "^0.2" }

[patch.crates-io]
bytes = { git = "https://github.com/tokio-rs/bytes", branch = "tsan-support" }

[dev-dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde_urlencoded = "^0.7"
lazy_static="^1"

