[package]
name = "newsletter-rs"
version = "0.1.2"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/drconopoima/newsletter-rs.git"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="newsletter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4" }
serde = { version = "^1" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
config = { version = "^0.14", default-features = false, features = ["yaml"] }
futures = { version = "^0.3" }
tokio-postgres = { version = "^0.7", features=[ "with-uuid-1" , "with-time-0_3" ] }
uuid = { version = "^1", default-features = false, features = ["v7"] }
regex = { version = "^1" }
deadpool-postgres = { version = "^0.14" }
tracing = { version = "^0.1", features = [ "log" ] }
md5 = { version = "^0.7" }
time = { version = "^0.3", features=["formatting"] }
tracing-subscriber = { version = "^0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "^0.3"
tracing-log = "^0.2"
anyhow = "^1"
tracing-actix-web = { version = "^0.7" }
serde-aux = { version = "^4", default-features = false, features = [] }
postgres-native-tls = { "version" = "^0.5" }
native-tls = { "version" = "^0.2" }

[dev-dependencies]
arbitrary = { version = "^1" }
arbtest = { version = "^0.3" }
reqwest = { version = "^0.12", features = ["json"] }
uuid = { version = "^1", default-features = false, features = ["v7", "v4"] }
serde_urlencoded = "^0.7"
claims = "^0.7"
rand = "^0.8"
fake = "^2"
quickcheck = "^1"
quickcheck_macros = "^1"

[patch.crates-io]
config = { git = 'https://github.com/mehcode/config-rs.git', rev = 'c4778596cd3f3b1001ca35bd6960fc1b139746ea' }
